<resources>
    <string name="app_name">Eppo - hire talents</string>
    <string name="menu_home">My posted jobs</string>
    <string name="menu_find_talents">Find talents</string>
    <string name="share_message_body">Simple tool to find best talents</string>

    <string name="txt_add">Add job</string>
    <string name="txt_select_field">Select field</string>
    <string name="txt_title">Title</string>
    <string name="txt_descr">Full job description</string>
    <string name="txt_adres">Address</string>
    <string name="txt_remot">Remote</string>
    <string name="txt_price">Price in MDL</string>
    <string name="txt_negociab">Negotiable</string>
    <string name="txt_postjb">Post the job</string>
    <string name="txt_field">Field</string>
    <string name="txt_applicants">Applicants</string>
    <string name="txt_phone">Phone (optional)</string>
    <string name="txt_seen">Seen by</string>
    <string name="txt_date">Creation date</string>
    <string name="txt_remove">Remove job</string>
    <string name="txt_job_det">Job details</string>
    <string name="txt_talents">talents</string>

    <string name="txt_select_field_warn">Field is not selected</string>
    <string name="txt_title_warn">Title cannot be empty</string>
    <string name="txt_descr_warn">Description cannot be empty</string>
    <string name="txt_adres_warn">Address cannot be empty</string>
    <string name="txt_price_warn">Price cannot be empty</string>
    <string name="txt_no_aplicants">No applicants yet</string>
    <string name="txt_ask_delete_job">Are you sure to delete this job?</string>

</resources>
