<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/whole_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_title"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/txt_small" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/txt_medium_xs"
            tools:text="Need to create an Andorid app" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/txt_field"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/txt_small" />

        <TextView
            android:id="@+id/tv_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/txt_medium_xs"
            tools:text="Computers and Technology" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/txt_descr"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/txt_small" />

        <TextView
            android:id="@+id/tv_descr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/txt_medium_xs"
            tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat." />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/txt_adres"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/txt_small" />

        <TextView
            android:id="@+id/tv_adress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/txt_medium_xs"
            tools:text="Chisinau" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/txt_date"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/txt_small" />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/txt_medium_xs"
            tools:text="Dec 10 2019" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/txt_price"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/txt_small" />

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/txt_medium_xs"
            tools:text="10,000" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/txt_seen"
            android:textColor="@color/secondary_text"
            android:textSize="@dimen/txt_small" />

        <TextView
            android:id="@+id/tv_seen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/txt_medium_xs"
            tools:text="344 talents" />

    </LinearLayout>


    <Button
        android:id="@+id/tv_remove"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:background="@color/red"
        android:gravity="center"
        android:text="@string/txt_remove"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/txt_medium_xs"
        android:textStyle="bold" />

</RelativeLayout>