<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/custom_dim_8"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <RelativeLayout
        android:id="@+id/zone_field"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/bg_rounded_rect_contur">

        <Spinner
            android:id="@+id/spinner_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true" />
    </RelativeLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/zone_field"
        android:hint="@string/txt_title"
        android:paddingTop="@dimen/activity_vertical_margin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_title"
            style="@style/TextViewSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:nextFocusDown="@+id/et_descr" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_descr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ti_title"
        android:hint="@string/txt_descr"
        android:paddingTop="@dimen/activity_vertical_margin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_descr"
            style="@style/TextViewSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:nextFocusDown="@+id/et_adress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_adress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ti_descr"
        android:hint="@string/txt_adres"
        android:paddingTop="@dimen/activity_vertical_margin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_adress"
            style="@style/TextViewSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nextFocusDown="@+id/et_price"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ti_adress"
        android:hint="@string/txt_price"
        android:paddingTop="@dimen/activity_vertical_margin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_price"
            style="@style/TextViewSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btn_create_job"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/custom_dim_24"
        android:onClick="onClick"
        android:text="@string/txt_postjb"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/txt_medium_xs"
        android:textStyle="bold" />

</RelativeLayout>